--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ str_data*
 lib/dedalo/diffusion/diffusion_index_ts_V40
 lib/dedalo/publication/client_api/v1/sample*
 lib/dedalo/common/js/lang/*
-lib/dedalo/common/css/structure.css
+structure.css
 
 # extras ignore all except common
 #lib/*/extras/*
