--- a/.gitignore
+++ b/.gitignore
@@ -64,10 +64,8 @@ koala-config.json
 .smbdelete*
 *~
 
-/lib/dedalo/common/css/structure.css
-
 /config.codekit3
 lib/dedalo/*/*-min.js
 lib/dedalo/*/*-min.css
-lib/dedalo/*/*.css
-lib/dedalo/*/*.css.map
+#lib/dedalo/*/*.css
+#lib/dedalo/*/*.css.map
