--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ lib/dedalo/*/*-min.css
 #lib/dedalo/*/*.css
 #lib/dedalo/*/*.css.map
 lib/dedalo/*/*/js/*-min.js
+
+/lib/dedalo/extras/media_protection/cookie/cookie_auth.php
