--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,4 @@ lib/dedalo/*/*-min.css
 #lib/dedalo/*/*.css.map
 lib/dedalo/*/*/js/*-min.js
 
-/lib/dedalo/extras/media_protection/cookie/cookie_auth.php
-
-/lib/dedalo/extras/media_protection/cookie/cookie_auth.php
+cookie_auth.php
