--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "geoip2/geoip2": "~2.0",
     	"leafo/lessphp": "0.4.0",
         "react/event-loop": "^1.0",
-        "react/http": "^0.8.3"
+        "react/http": "^0.8.3",
+        "socrata/soda-php": "^1.1"
   }
 }
