--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     	"leafo/lessphp": "0.4.0",
         "react/event-loop": "^1.0",
         "react/http": "^0.8.3",
-        "socrata/soda-php": "^1.1"
+        "socrata/soda-php": "^1.1",
+        "onelogin/php-saml": "^3.0"
   }
 }
