--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 # Protect files and directories from prying eyes.
 
 # Directories are final path only, not between. 
-<FilesMatch "(\.(inc|sh|txt|tpl|backup|composer\.(json|lock))$|^#.*#$|\.php(~|\.sw[op]|\.orig\.save)$|deleted|temp|backup|config)">
+<FilesMatch "(\.(inc|sh|txt|tpl|backup|composer\.(json|lock))$|^#.*#$|\.php(~|\.sw[op]|\.orig\.save)$|deleted|backup|config)">
 
   <IfModule mod_authz_core.c>
     Require all denied
