Updated gitignore with new vendor config

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,15 @@ lib/dedalo/extras/*
 !lib/dedalo/extras/numisdata
 !lib/dedalo/extras/muvaet
 
+# vendor ignore all except used public
+vendor/*
+!vendor/maxmind
+!vendor/maxmind-db
+!vendor/geoip2
+!vendor/socrata
+!vendor/composer
+!vendor/leafo
+
 # Ignore paths that contain generated content.
 media/*
 media_test
