--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "react/event-loop": "^1.0",
         "react/http": "^0.8.3",
         "socrata/soda-php": "^1.1",
-        "onelogin/php-saml": "^3.0"
+        "onelogin/php-saml": "3.X.X",
+        "lightsaml/lightsaml": "^1.4"
   }
 }
