--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,6 @@ lib/dedalo/*/*/js/*-min.js
 /lib/dedalo/ts_object/js/ts_object-min.js
 /lib/dedalo/ts_object/js/ts_object-min.js.map
 
+# saml
+/lib/dedalo/login/saml/test_js.html
+/lib/dedalo/login/saml/test.php
