--- a/.gitignore
+++ b/.gitignore
@@ -81,41 +81,27 @@ koala-config.json
 config.codekit3
 
 # various minified
+# js min
 lib/dedalo/*/*-min.js
-lib/dedalo/*/*-min.css
+lib/dedalo/*/js/*-min.js
 lib/dedalo/*/*/js/*-min.js
-/lib/dedalo/button_delete/js/button_delete-min.js
-/lib/dedalo/button_delete/js/button_delete-min.js.map
-/lib/dedalo/common/js/common-min.js.map
-/lib/dedalo/component_autocomplete/js/component_autocomplete-min.js
-/lib/dedalo/component_autocomplete/js/component_autocomplete-min.js.map
-/lib/dedalo/component_autocomplete_hi/js/component_autocomplete_hi-min.js
-/lib/dedalo/component_calculation/js/component_calculation-min.js
-/lib/dedalo/component_calculation/js/component_calculation-min.js.map
-/lib/dedalo/component_common/js/component_common-min.js
-/lib/dedalo/component_common/js/component_common-min.js.map
-/lib/dedalo/component_geolocation/js/component_geolocation DES-min.js
-/lib/dedalo/component_geolocation/js/component_geolocation DES-min.js.map
-/lib/dedalo/component_image/js/component_image-min.js
-/lib/dedalo/component_image/js/component_image-min.js.map
-/lib/dedalo/component_image/js/component_image_read-min.js
-/lib/dedalo/component_image/js/component_image_read-min.js.map
-/lib/dedalo/component_portal/js/component_portal-min.js
-/lib/dedalo/component_portal/js/component_portal-min.js.map
-/lib/dedalo/component_state/js/component_state-min.js
-/lib/dedalo/component_state/js/component_state-min.js.map
-/lib/dedalo/login/js/login-min.js
-/lib/dedalo/login/js/login-min.js.map
-/lib/dedalo/section_group/js/section_group-min.js.map
-/lib/dedalo/section_tab/js/section_tab-min.js.map
-/lib/dedalo/services/service_autocomplete/js/service_autocomplete-min.js.map
-/lib/dedalo/tools/tool_common/js/tool_common-min.js.map
-/lib/dedalo/tools/tool_image_versions/js/tool_image_versions-min.js.map
-/lib/dedalo/tools/tool_transcription/js/tool_transcription-min.js.map
-/lib/dedalo/tools/tool_upload/js/tool_upload-min.js.map
-/lib/dedalo/ts_object/js/ts_object-min.js
-/lib/dedalo/ts_object/js/ts_object-min.js.map
+# js map
+lib/dedalo/*/*-min.js.map
+lib/dedalo/*/js/*-min.js.map
+lib/dedalo/*/*/js/*-min.js.map
+# css min
+lib/dedalo/*/*-min.css
+lib/dedalo/*/css/*-min.css
+lib/dedalo/*/*/css/*-min.css
+# css map
+lib/dedalo/*/*.css.map
+lib/dedalo/*/css/*.css.map
+lib/dedalo/*/*/css/*.css.map
 
 # saml
-/lib/dedalo/login/saml/test_js.html
-/lib/dedalo/login/saml/test.php
+lib/dedalo/login/saml/test_js.html
+lib/dedalo/login/saml/test.php
+
+
+
+
