--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ vendor/*
 !vendor/maxmind-db
 !vendor/react
 !vendor/symfony
+!vendor/ringcentral
 !vendor/geoip2
 !vendor/socrata
 !vendor/composer
