change the gitignore and add the vendor autoload.php

--- a/.gitignore
+++ b/.gitignore
@@ -44,16 +44,16 @@ lib/dedalo/extras/*
 !lib/dedalo/extras/muvaet
 
 # vendor ignore all except used public
-vendor/*
-!vendor/maxmind
-!vendor/maxmind-db
-!vendor/react
-!vendor/symfony
-!vendor/ringcentral
-!vendor/geoip2
-!vendor/socrata
-!vendor/composer
-!vendor/leafo
+# vendor/*
+# !vendor/maxmind
+# !vendor/maxmind-db
+# !vendor/react
+# !vendor/symfony
+# !vendor/ringcentral
+# !vendor/geoip2
+# !vendor/socrata
+# !vendor/composer
+# !vendor/leafo
 
 # Ignore paths that contain generated content.
 media/*
