--- a/config/config_private/config.json
+++ b/config/config_private/config.json
@@ -191,13 +191,13 @@
     "type": "int"
   },
   {
-    "name": "DEDALO_MEDIA_BASE_PATH",
+    "name": "DEDALO_MEDIA_PATH",
     "value": "/media_test/media_development",
     "comment": "Path where media is stored. Referenced to DEDALO_ROOT",
     "type": "string"
   },
   {
-    "name": "DEDALO_MEDIA_BASE_URL",
+    "name": "DEDALO_MEDIA_URL",
     "value": "/media_test/media_development",
     "comment": "Path where media is served by http. Referenced to DEDALO_ROOT_WEB",
     "type": "string"
@@ -205,7 +205,7 @@
   {
     "name": "DEDALO_AV_FOLDER",
     "value": "/av",
-    "comment": "Path (inside DEDALO_MEDIA_BASE_PATH) where media av is stored. Normally '/av' ",
+    "comment": "Path (inside DEDALO_MEDIA_PATH) where media av is stored. Normally '/av' ",
     "type": "string"
   },
   {
