--- a/.gitignore
+++ b/.gitignore
@@ -87,11 +87,11 @@ config.codekit3
 # various minified except the pdf viewer
 # js min
 lib/dedalo/**/*-min.js
-!lib/dedalo/component_pdf/viewer
+!lib/dedalo/component_pdf/viewer/*-min.js
 
 # js map except the pdf viewer
 lib/dedalo/**/*-min.js.map
-!lib/dedalo/component_pdf/viewer
+!lib/dedalo/component_pdf/viewer/*-min.js.map
 
 # css min
 lib/dedalo/**/*-min.css
