--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,4 @@ lib/dedalo/common/js/lang/*
 /lib/dedalo/search/js/paginator copy.js
 
 /lib/dedalo/search/js/search copy.js
+/lib/dedalo/extras/mdcat/cercador
